// Copyright (c) 2022 Intel Corporation
// SPDX-License-Identifier: Apache-2.0
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.logistic_regression.inference";
option java_outer_classname = "InferProto";
option objc_class_prefix = "INFER";

package inference;

service Inference {
  rpc InitCtx(InitCtxRequest) returns (InitCtxReply) {}
  rpc Infer(InferRequest) returns (InferReply) {}
}

message InitCtxRequest {
  bytes params = 1;
  bytes pub_key = 2;
  bytes relin_key = 3;
  int32 security_level = 4;
  double scale = 5;
}

message InitCtxReply {

}

message InferRequest {
  bytes data = 1;
  int32 batches = 2;
  int32 batch_size = 3;
}

message InferReply {
  bytes result = 1;
  int32 counts = 2;
}